--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "5",
+    "react-redux-firebase": "2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-firestore": "^0.11.0",
     "uuid": "^3.3.3"
   },
   "scripts": {
