--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "bulma": "^0.8.0",
     "bulmaswatch": "^0.7.5",
+    "firebase": "^7.5.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "5",
-    "react-redux-firebase": "2",
+    "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
