--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "bulmaswatch": "^0.7.5",
     "firebase": "^7.5.0",
     "font-awesome": "^4.7.0",
+    "history": "^4.9.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.0.5",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-firestore": "^0.11.0",
-    "uuid": "^3.3.3"
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.5",
+    "redux-auth-wrapper": "^2.1.0",
+    "redux-firestore": "^0.7.3",
+    "sass-loader": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
